--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "stylus": "^0.54.2"
   },
   "devDependencies": {
+    "glob": "^7.0.3",
     "grunt": "*",
+    "grunt-contrib-compass": "*",
+    "grunt-contrib-cssmin": "*",
     "grunt-contrib-jshint": "^1.0.0",
     "grunt-contrib-nodeunit": "^1.0.0",
     "grunt-contrib-sass": "^1.0.0",
     "grunt-contrib-uglify": "^1.0.1",
     "grunt-contrib-watch": "^1.0.0",
-    "grunt-contrib-compass": "*",
-    "grunt-contrib-cssmin": "*",
     "jshint-stylish": "*",
     "matchdep": "^1.0.1"
   }
